// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy validated applications to Azure via azd, Bicep, or Terraform execution steps. WHEN: "run azd up", "run azd deploy", "deploy to Azure", "bicep deploy", "terraform apply", "publish to Azure", "go live".",
  "extractedKeywords": [
    "applications",
    "apply",
    "azure",
    "bicep",
    "cli",
    "deploy",
    "execution",
    "identity",
    "live",
    "mcp",
    "publish",
    "sql",
    "steps",
    "terraform",
    "validated",
    "validation",
    "when",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "applications",
  "apply",
  "azure",
  "bicep",
  "cli",
  "deploy",
  "execution",
  "identity",
  "live",
  "mcp",
  "publish",
  "sql",
  "steps",
  "terraform",
  "validated",
  "validation",
  "when",
]
`;
